--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,2 +1,3 @@
-<esri-map #mapView (viewCreated)="onViewCreated()">
+<esri-map #esriMap (viewCreated)="onViewCreated()">
+  <coordinate [map-view]="esriMap.mapView"></coordinate>
 </esri-map>
