component test closer

--- a/app/coordinate/coordinate.component.html
+++ b/app/coordinate/coordinate.component.html
@@ -3,6 +3,6 @@
     Level: <i>{{mapView.zoom  | number:'.0-0'}}</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Scale: <i>{{mapView.scale | number:'.0-0'}}</i>
   </p>
   <p id="coordinatesLine">
-    Lat: <i>{{longitude | number:'.6-6'}}</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lon: <i>{{latitude | number:'.6-6'}}</i>
+    Lat: <i id="longitude">{{longitude | number:'.6-6'}}</i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Lon: <i id="latitude">{{latitude | number:'.6-6'}}</i>
   </p>
 </div>
